--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -28,12 +28,19 @@
         width: 990px;
     }
     section#login>div#imagem{
-        float: left;
-        width: 50%;
+        float: right;
+        width: 60%;
         height: 100%;
     }
     section#login>div#formulario{
-        float: right;
-        width: 50%;
+        float: left;
+        width: 40%;
+    }
+
+    div#formulario>h1{
+        font-size: 2em;
+    }
+    div#formulario>p{
+        font-size: 1.2em;
     }
 }
