--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ main{
 section#login{
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -49,4 +49,56 @@ section#login > div#formulario{
     padding: 10px;
 
 
+}
+div#formulario>h1{
+        text-align: center;
+        margin-bottom: 10px;
+}
+div#formulario>p{
+    margin-bottom: 10px;
+}
+form >div.campo{
+    display: block;
+    background-color: #5f2c82;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin 5px 0px
+}
+div.campo>label{
+    display: none ;
+}
+form>input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 70%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+form>input[type=submit]:hover{
+    background-color:#164e4c;
+}
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 70%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    border-radius: 3px;
+    border: 1px solid #164e4c;
+    text-decoration: none;
+    color: #164e4c;
+}
+form > a.botao:hover{
+background-color: #77fdf9;
+}
+form> a.botao>span{
+    font-size: 0.8em;
 }
